# rust-puzzle

./: 202410_high_score.json  Cargo.toml  LICENSE  high_score.json  save.json
src/: asset.rs  consts.rs  file.rs  game.rs  game_over.rs  high_score.rs  main.rs  parameter.rs  piece.rs  resource.rs  score.rs  title.rs  ui.rs
src/asset/: asset.rs  font.rs  image.rs  plugin.rs  resource.rs  sound.rs  state.rs  system.rs
src/asset/font/: font.rs  font_assets.rs
src/asset/image/: game_image_assets.rs  image.rs  image_assets.rs  piece_iamge_assets.rs  piece_image_assets.rs
src/asset/plugin/: assets_pluin.rs  piece_sound_plugin.rs
src/asset/resource/: piece_sound.rs
src/asset/sound/: piece_sound_assets.rs  sound.rs  sound_assets.rs
src/asset/state/: asset_load_state.rs
src/asset/system/: assets_sysmtem.rs  font_loader_system.rs  image_loader_system.rs  piece_sound_system.rs  sound_loader_system.rs
src/consts/: color_theme.rs  consts.rs
src/coordinate/: position.rs
src/date/: year_month.rs
src/field/: game.rs
src/field/game/: cat_mug.rs  material.rs  plugin.rs  system.rs
src/file/: file_reader.rs  json_file.rs  storage.rs
src/file_name/: traits.rs
src/game/: component.rs  despawn.rs  image_bundle_builder.rs  plugin.rs  screen_state.rs  state.rs  system.rs  ui.rs
src/game/background/: desk.rs
src/game/component/: game_over_sensor.rs  on_display_over.rs
src/game/plugin/: game_over_plugin.rs  game_plugin.rs
src/game/state/: game_page_state.rs  game_state.rs
src/game/system/: despawn_screen.rs  game_over_system.rs  game_page_state.rs  game_state.rs  game_system.rs
src/game/ui/: background_ui.rs  evolve_ui.rs  game_over_ui.rs  image_ui.rs  piece_ui.rs
src/game_over/: component.rs  menu.rs  menu_selection.rs  plugin.rs  resource.rs  sensor.rs  system.rs  ui.rs
src/high_score/: component.rs  plugin.rs  resource.rs  system.rs
src/parameter/: input.rs  material_mesh.rs  time.rs
src/piece/: animal_piece.rs  collision.rs  component.rs  drop.rs  evolution.rs  ext.rs  indicator.rs  movement.rs  next_piece.rs  parameter.rs  piece.rs  piece_factory.rs  plugin.rs  renderer.rs  resource.rs  sound.rs  spawner.rs  system.rs  ui.rs
src/resource/: drop_postion.rs  grab_postion.rs  material.rs  puzzle_score.rs
src/score/: component.rs  high_score.rs  plugin.rs  resource.rs  system.rs  ui.rs
src/title/: component.rs  menu.rs  plugin.rs  resource.rs  system.rs  ui.rs
src/ui/: image.rs  menu.rs  text.rs
(+149 files in other folders)
