[package]
name = "rust-puzzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "=0.13.1"}
# bevy_a11y = { version = "=0.13.0"}
# bevy_animation = { version = "=0.13.0"}
# bevy_app = { version = "=0.13.0"}
# bevy_asset_macros = { version = "=0.13.0"}
# bevy_derive = { version = "=0.13.0"}
bevy_ecs = { version = "=0.13.1"}
bevy_ecs_macros = { version = "=0.13.1"}
rand = "0.8.5"
bevy_rapier2d = { version = "0.25.0", features = ["simd-stable", "debug-render-2d"] }
