[package]
name = "rust-puzzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 bevy = { version = "0.12.0", features = ["mp3"]}
# bevy_internal = { version = "=0.13.1"}
# bevy_dylib =  { version = "=0.13.1"}
# bevy_app = {  version = "=0.13.0" }
# bevy_derive = { version = "=0.13.0" }
# bevy_ecs = { version = "=0.13.0" }
# bevy_ecs_macros = { version = "=0.13.0"}
# bevy_asset = { version = "=0.13.0" }
# bevy_core = {  version = "=0.13.0" }
# bevy_math = {  version = "=0.13.0" }
# bevy_reflect = { version = "=0.13.0" }

# bevy_render = { version = "=0.13.0" }
# bevy_time = { version = "=0.13.0" }
# bevy_utils = {  version = "=0.13.0" }
# bevy_transform = { version = "=0.13.0" }
# bevy_hierarchy = {  version = "=0.13.0" }

# bevy_encase_derive = {version = "=0.13.0" }
# bevy_gizmos_macros = {version = "=0.13.0" }
# bevy_macro_utils = {version = "=0.13.0" }
# bevy_mikktspace = {version = "=0.13.0" }
# bevy_ptr = {version = "=0.13.0" }
# bevy_tasks = {version = "=0.13.0" }
# bevy_utils_proc_macros = {version = "=0.13.0" }

rand = "0.8.5"
bevy_rapier2d = { version = "0.24.0", features = ["simd-stable", "debug-render-2d"] }
serde = "1.0.207"
serde_json = "1.0.124"
chrono = "0.4.38"
