[package]
name = "rust-puzzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.16.0", features = ["mp3"]}
rand = "0.8.5"
bevy_rapier2d = { version = "0.31.0", features = ["simd-stable", "debug-render-2d"] }
serde = "1.0.207"
serde_json = "1.0.124"
chrono = {version = "0.4.38", features = ["serde"] }
thiserror = "2.0"
